@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -18,9 +19,9 @@ import com.example.ecommerce.dto.product.CreateProductDto;
 import com.example.ecommerce.dto.product.ProductDto;
 import com.example.ecommerce.entity.Product;
 import com.example.ecommerce.repository.ProductRepository;
+import com.example.ecommerce.repository.custom.ProductRepositoryCustom;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -33,7 +34,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.web.multipart.MultipartFile;
 
 @ExtendWith(MockitoExtension.class)
 class ProductServiceTest {
@@ -41,14 +44,20 @@ class ProductServiceTest {
     @Mock
     private ProductRepository productRepository;
     @Mock
+    private ProductRepositoryCustom productRepositoryCustom;
+    @Mock
     private S3Service s3Service;
     @InjectMocks
     private ProductServiceImpl productService;
     private Product product;
+    private Product product1;
+    private Product product2;
+    private List<ProductDto> productDtoList;
+    private List<Product> productList;
 
     @BeforeEach
     void setUp() {
-        product = spy(Product.builder()
+        product = Product.builder()
             .id(1L)
             .name("치노 팬츠")
             .description("스타일리시한 슬림 핏으로 다양한 코디에 활용 가능합니다.")
@@ -57,18 +66,77 @@ class ProductServiceTest {
             .category(Category.PANTS)
             .size(Size.M)
             .shopDisplayable(true)
-            .fileName("file_name")
-            .fileKey("file_key")
-            .build());
+            .fileName("product_image.png")
+            .fileKey("uuid-product_image.png")
+            .avgRating(0.0f)
+            .build();
+
+        productList = List.of(Product.builder()
+                .id(2L)
+                .name("패딩 점퍼")
+                .description("따뜻한 겨울 점퍼")
+                .unitPrice(120000)
+                .stockQuantity(30)
+                .category(Category.OUTER)
+                .size(Size.L)
+                .shopDisplayable(true)
+                .fileName("padding.png")
+                .fileKey("file-key-1")
+                .build(),
+            Product.builder()
+                .id(3L)
+                .name("트렌치 코트")
+                .description("세련된 스타일의 코트")
+                .unitPrice(150000)
+                .stockQuantity(20)
+                .category(Category.OUTER)
+                .size(Size.M)
+                .shopDisplayable(false)
+                .fileName("coat.png")
+                .fileKey("file-key-2")
+                .build()
+        );
+
+        product1 = productList.get(0);
+        product2 = productList.get(1);
+
+        // ProductDto 변환 리스트 생성
+        productDtoList = List.of(
+            ProductDto.builder()
+                .id(product1.getId())
+                .name(product1.getName())
+                .description(product1.getDescription())
+                .unitPrice(product1.getUnitPrice())
+                .stockQuantity(product1.getStockQuantity())
+                .category(product1.getCategory().name())
+                .size(product1.getSize().name())
+                .shopDisplayable(product1.getShopDisplayable())
+                .fileName(product1.getFileName())
+                .fileUrl("https://s3.com/" + product1.getFileKey())
+                .build(),
+
+            ProductDto.builder()
+                .id(product2.getId())
+                .name(product2.getName())
+                .description(product2.getDescription())
+                .unitPrice(product2.getUnitPrice())
+                .stockQuantity(product2.getStockQuantity())
+                .category(product2.getCategory().name())
+                .size(product2.getSize().name())
+                .shopDisplayable(product2.getShopDisplayable())
+                .fileName(product2.getFileName())
+                .fileUrl("https://s3.com/" + product2.getFileKey())
+                .build()
+        );
     }
 
     // request : CreateProductDto createProductDto, MultipartFile file
     // response : Long id
     @Test
-    @DisplayName("상품을 생성할 수 있다.")
+    @DisplayName("상품 생성")
     void createProduct() {
         // given
-        CreateProductDto createProductDto = spy(CreateProductDto.builder()
+        CreateProductDto createProductDto = CreateProductDto.builder()
             .name("치노 팬츠")
             .description("스타일리시한 슬림 핏으로 다양한 코디에 활용 가능합니다.")
             .unitPrice(50000)
@@ -76,37 +144,33 @@ class ProductServiceTest {
             .category(String.valueOf(Category.PANTS))
             .size(String.valueOf(Size.M))
             .shopDisplayable(true)
-            .build());
+            .build();
 
-        MockMultipartFile file = new MockMultipartFile(
+        MultipartFile file = new MockMultipartFile(
             "file",
-            "test-image.png",
+            "product_image.png",
             "image/png",
             new byte[0]
         );
 
-        String fileKey = "generated-file-key";
-
-        when(s3Service.uploadFile(file)).thenReturn(fileKey);
-        when(createProductDto.toEntity(createProductDto, file, fileKey)).thenReturn(product);
+        when(s3Service.uploadFile(any(MultipartFile.class))).thenReturn(
+            "file-key");
         when(productRepository.save(any(Product.class))).thenReturn(product);
 
         // when
         Long productId = productService.createProduct(createProductDto, file);
 
         // then
-        verify(s3Service, times(1)).uploadFile(file); // S3 업로드 검증
-        verify(productRepository, times(1)).save(any(Product.class)); // DB 저장 검증
-        verify(createProductDto, times(1)).toEntity(createProductDto, file, fileKey);
+        verify(s3Service, times(1)).uploadFile(file);
+        verify(productRepository, times(1)).save(any(Product.class));
 
         assertNotNull(productId);
         assertEquals(product.getId(), productId);
     }
 
-    // request : CreateProductDto createProductDto, MultipartFile file
     @Test
-    @DisplayName("createProductDto에서 엔티티로 변환할 때, avgRating 필드는 0.0f로 설정되어야 한다.")
-    void createProduct_setDefaultAvgRatingToZero() {
+    @DisplayName("상품 생성 - createProducDto.toEntity() 변환 확인")
+    void createProduct_createProductDto_toEntity_check() {
         // given
         CreateProductDto createProductDto = spy(CreateProductDto.builder()
             .name("치노 팬츠")
@@ -120,30 +184,31 @@ class ProductServiceTest {
 
         MockMultipartFile file = new MockMultipartFile(
             "file",
-            "test-image.png",
+            "product_image.png",
             "image/png",
             new byte[0]
         );
 
-        String fileKey = "generated-file-key";
+        String fileKey = "uuid-product_image.png";
 
         // when
-        Product product = createProductDto.toEntity(createProductDto, file, fileKey);
+        Product convertedProduct = createProductDto.toEntity(createProductDto, file,
+            fileKey);
 
         // then
-        assertThat(createProductDto.avgRating()).isEqualTo(null); //  DTO의 avgRating은 null이어야 함
-        assertThat(product.getAvgRating()).isEqualTo(0.0f); //  엔티티에서는 0.0f로 설정되어야 함
-        assertThat(product.getFileKey()).isEqualTo(fileKey); //  fileKey가 정상적으로 설정되어야 함
         verify(createProductDto, times(1)).toEntity(createProductDto, file, fileKey);
+
+        assertThat(convertedProduct).usingRecursiveComparison().ignoringFields("id")
+            .isEqualTo(product);
     }
 
     // request : Pageable pageable
     // response : PageableDto<ProductDto> returnedPageableDto
     @Test
-    @DisplayName("존재하는 모든 상품을 조회할 수 있다.")
+    @DisplayName("상품 전체 조회")
     void getAllProducts() {
         // given
-        List<Product> productList = IntStream.range(0, 10)
+        List<Product> productList = IntStream.range(0, 2)
             .mapToObj(i -> Product.builder()
                 .id((long) i)
                 .name("치노 팬츠 " + i)
@@ -153,53 +218,156 @@ class ProductServiceTest {
                 .category(Category.PANTS)
                 .size(Size.M)
                 .shopDisplayable(true)
-                .fileName(null)
-                .fileKey(null)
+                .fileName("file_name" + "_" + i + ".png")
+                .fileKey("uuid-file_name" + "_" + i + ".png")
                 .build())
-            .collect(Collectors.toList());
+            .toList();
 
-        Page<Product> productsPage = new PageImpl<>(productList);
-        Pageable pageable = PageRequest.of(1, 10);
+        Pageable pageable = PageRequest.of(1, 10, Sort.by("name").ascending());
+        Page<Product> mockPage = new PageImpl<>(productList, pageable, productList.size());
 
-        PageableDto<ProductDto> returnedPageableDto = spy(PageableDto.<ProductDto>builder()
-            .data(productList.stream()
-                .map(p -> ProductDto.builder()
-                    .id(p.getId())
-                    .name(p.getName())
-                    .description(p.getDescription())
-                    .unitPrice(p.getUnitPrice())
-                    .stockQuantity(p.getStockQuantity())
-                    .category(p.getCategory().name())
-                    .size(p.getSize().name())
-                    .fileName(p.getFileName())
-                    .shopDisplayable(p.getShopDisplayable())
-                    .fileUrl(null)
-                    .build())
-                .collect(Collectors.toList()))
-            .page(1)
-            .size(10)
-            .last(true)
-            .build());
-
-        when(productRepository.findAll(pageable)).thenReturn(productsPage);
+        when(productRepository.findAll(pageable)).thenReturn(mockPage);
 
         // when
         PageableDto<ProductDto> result = productService.getAllProducts(pageable);
 
         // then
-        verify(productRepository, times(1)).findAll(pageable);
+        verify(productRepository, times(1)).findAll(pageable); // findAll이 한 번 호출되었는지 확인
 
         assertNotNull(result);
-        assertEquals(result, returnedPageableDto);
+        assertEquals(result.page() - 1, 1);
         assertEquals(result.size(), 10);
-        assertEquals(result.page(), 1);
+        assertEquals(result.data().size(), 2);
+        assertThat(result.data().get(0).name()).isEqualTo("치노 팬츠 0");
+        assertThat(result.data().get(1).name()).isEqualTo("치노 팬츠 1");
     }
 
+    // request : String keyword, Category category, Size productSize, Pageable pageable, String entryPoint
+    // response : PageableDto<ProductDto>
+    @Test
+    @DisplayName("상품 검색 - entryPoint 미포함(shopDisplayable : true, false 둘 다 가능)")
+    void searchProductsWithoutEntryPoint() {
+        // given
+        String keyword = "패딩";
+        Category category = Category.OUTER;
+        Size size = Size.L;
+
+        Pageable pageable = PageRequest.of(1, 10, Sort.by("name").ascending());
+        PageableDto<Product> mockProductPageableDto = new PageableDto<>(productList, false, 1, 10);
+
+        when(productRepositoryCustom.searchProducts(keyword, category, size, pageable, null))
+            .thenReturn(mockProductPageableDto);
+
+        // when
+        when(s3Service.getPresignedUrl("file-key-1")).thenReturn("https://s3.com/file-key-1");
+        when(s3Service.getPresignedUrl("file-key-2")).thenReturn("https://s3.com/file-key-2");
+        PageableDto<ProductDto> result = productService.searchProducts(keyword, category, size,
+            pageable, null);
+
+        System.out.println("result = " + result);
+
+        // then
+        verify(productRepositoryCustom, times(1)).searchProducts(keyword, category, size, pageable,
+            null);
+        verify(s3Service, times(1)).getPresignedUrl("file-key-1");
+        verify(s3Service, times(1)).getPresignedUrl("file-key-2");
+
+        assertEquals(result.data().size(), 2);
+        assertThat(result.last()).isFalse();
+        assertThat(result.page()).isEqualTo(1);
+        assertThat(result.size()).isEqualTo(10);
+
+        assertThat(result.data().get(0))
+            .usingRecursiveComparison()
+            .isEqualTo(productDtoList.get(0));
+        assertThat(result.data().get(1))
+            .usingRecursiveComparison()
+            .isEqualTo(productDtoList.get(1));
+    }
+
+    // request : String keyword, Category category, Size productSize, Pageable pageable, String entryPoint
+    // response : PageableDto<ProductDto>
+    @Test
+    @DisplayName("상품 검색 - entryPoint 포함(shop)")
+    void searchProductsWithEntryPoint() {
+        // given
+        // shopDisplayable = true인 상품 리스트 (entryPoint = "shop"일 때 필터링되어야 함)
+        List<Product> shopDisplayableProducts = List.of(product1);
+
+        // ProductDto 변환 리스트 (shopDisplayable = true만 포함)
+        List<ProductDto> shopDisplayableProductDtos = List.of(
+            productDtoList.get(0)
+
+        );
+        String keyword = "패딩";
+        Category category = Category.OUTER;
+        Size size = Size.L;
+        String entryPoint = "shop";
+
+        Pageable pageable = PageRequest.of(0, 10, Sort.by("name").ascending());
+        PageableDto<Product> mockProductPageableDto = new PageableDto<>(shopDisplayableProducts,
+            false, 1, 10);
+
+        // Mock 설정: shopDisplayable = true인 상품만 반환해야 함
+        when(productRepositoryCustom.searchProducts(keyword, category, size, pageable, entryPoint))
+            .thenReturn(mockProductPageableDto);
+        when(s3Service.getPresignedUrl("file-key-1")).thenReturn("https://s3.com/file-key-1");
+
+        // when
+        PageableDto<ProductDto> result = productService.searchProducts(keyword, category, size,
+            pageable, entryPoint);
+
+        // then
+        verify(productRepositoryCustom, times(1)).searchProducts(keyword, category, size, pageable,
+            entryPoint);
+        verify(s3Service, times(1)).getPresignedUrl("file-key-1");
+        verify(s3Service, never()).getPresignedUrl(
+            "file-key-2");
+
+        assertEquals(result.data().size(), 1);
+        assertThat(result.last()).isFalse();
+        assertThat(result.page()).isEqualTo(1);
+        assertThat(result.size()).isEqualTo(10);
+
+        assertThat(result.data().get(0).shopDisplayable()).isTrue();
+        assertThat(result.data().get(0))
+            .usingRecursiveComparison()
+            .isEqualTo(shopDisplayableProductDtos.get(0));
+
+    }
+
+    // request : List<Product> productDtoPageableDto
+    // response : List<ProductDto>
+    @Test
+    @DisplayName("Product 리스트를 ProductDto 리스트로 변환 - S3 Presigned URL 포함")
+    void convertToProductDtoListTest() {
+        //given
+        PageableDto<Product> mockProductPageableDto = new PageableDto<>(productList,
+            true, 1, 10);
+
+        when(s3Service.getPresignedUrl("file-key-1")).thenReturn("https://s3.com/file-key-1");
+        when(s3Service.getPresignedUrl("file-key-2")).thenReturn("https://s3.com/file-key-2");
+
+        // when
+        List<ProductDto> result = productService.convertToProductDtoList(
+            mockProductPageableDto.data());
+
+        // then
+        verify(s3Service, times(1)).getPresignedUrl("file-key-1");
+        verify(s3Service, times(1)).getPresignedUrl("file-key-2");
+
+        assertEquals(result.size(), 2);
+
+        assertThat(result.get(0)).usingRecursiveComparison()
+            .isEqualTo(productDtoList.get(0));
+        assertThat(result.get(1)).usingRecursiveComparison()
+            .isEqualTo(productDtoList.get(1));
+    }
 
     // request : Long id
     // response : ProductDto returnedProductDto
     @Test
-    @DisplayName("단일 상품을 조회할 수 있다.")
+    @DisplayName("상품 단일 조회")
     void getProduct() {
         // given
         Long id = 1L;
@@ -213,25 +381,21 @@ class ProductServiceTest {
             .category(String.valueOf(Category.PANTS))
             .size(String.valueOf(Size.M))
             .shopDisplayable(true)
-            .fileName("file_name")
+            .fileName("product_image.png")
             .fileUrl("file_url")
             .build();
 
         String fileUrl = "file_url";
 
         when(productRepository.findById(id)).thenReturn(Optional.of(product));
-        when(product.getFileKey()).thenReturn("file_key");
-        when(s3Service.getPresignedUrl("file_key")).thenReturn(fileUrl);
-        when(product.getFileName()).thenReturn("file_name");
+        when(s3Service.getPresignedUrl(product.getFileKey())).thenReturn(fileUrl);
 
         // when
         ProductDto productDto = productService.getProduct(1L);
 
         // then
         verify(productRepository, times(1)).findById(1L);
-        verify(product, times(1)).getFileKey();
-        verify(s3Service, times(1)).getPresignedUrl("file_key");
-        verify(product, times(1)).getFileName();
+        verify(s3Service, times(1)).getPresignedUrl(product.getFileKey());
 
         assertNotNull(productDto);
         assertThat(productDto).usingRecursiveComparison().isEqualTo(returnedProductDto);
@@ -239,7 +403,7 @@ class ProductServiceTest {
 
     @Test
     @DisplayName("찾는 상품이 존재하지 않을 시, ProductNotFoundException 예외를 던진다.")
-    void getProduct_NotFound() {
+    void getProduct_ProductNotFoundException() {
         // given
         when(productRepository.findById(product.getId())).thenReturn(Optional.empty());
 
@@ -252,29 +416,12 @@ class ProductServiceTest {
     // request : Long id, ProductDto productDto, MultipartFile file
     // response : ProductDto returnedProductDto
     @Test
-    @DisplayName("상품을 갱신할 수 있다.")
+    @DisplayName("상품 갱신 - 파일 포함")
     void updateProductWithFile() {
         // given
         Long id = 1L;
 
         ProductDto productDto = ProductDto.builder()
-            .name("패딩 점퍼")
-            .description("방한용으로 착용하기 좋은 따뜻한 패딩 점퍼입니다.")
-            .unitPrice(50000)
-            .stockQuantity(100)
-            .category(String.valueOf(Category.OUTER))
-            .size(String.valueOf(Size.L))
-            .shopDisplayable(true)
-            .build();
-
-        MockMultipartFile file = new MockMultipartFile(
-            "file",
-            "updated-image.png",
-            "image/png",
-            new byte[0]
-        );
-
-        ProductDto returnedProducDto = ProductDto.builder()
             .id(1L)
             .name("패딩 점퍼")
             .description("방한용으로 착용하기 좋은 따뜻한 패딩 점퍼입니다.")
@@ -283,32 +430,67 @@ class ProductServiceTest {
             .category(String.valueOf(Category.OUTER))
             .size(String.valueOf(Size.L))
             .shopDisplayable(true)
-            .fileName(null)
-            .fileUrl(null)
+            .fileName("product_image.png")
+            .fileUrl("file_url")
             .build();
 
+        MockMultipartFile file = new MockMultipartFile(
+            "file",
+            "product_image.png",
+            "image/png",
+            new byte[0]
+        );
+
         String fileKey = "file-key";
+
         when(s3Service.uploadFile(file)).thenReturn(fileKey);
-        when(productRepository.findById(1L)).thenReturn(Optional.of(product));
+        when(s3Service.getPresignedUrl(fileKey)).thenReturn("file_url");
+        when(productRepository.findById(id)).thenReturn(Optional.of(product));
 
         // when
         ProductDto result = productService.updateProduct(id, productDto, file);
 
         // then
-        verify(s3Service, times(1)).uploadFile(file); // 파일 업로드가 호출되어야 함
-        verify(productRepository, times(1)).findById(1L);
-        verify(product, times(1)).update(productDto, file.getOriginalFilename(),
-            fileKey); // 파일명과 fileKey가 올바르게 전달됨
+        verify(s3Service, times(1)).uploadFile(file);
+        verify(productRepository, times(1)).findById(id);
 
-        assertNotNull(result);
-        assertEquals(result, returnedProducDto);
+        assertThat(result).usingRecursiveComparison().isEqualTo(productDto);
+    }
 
+    @Test
+    @DisplayName("상품 갱신 - 파일 미포함")
+    void updateProductWithoutFile() {
+        // given
+        Long id = 1L;
+
+        ProductDto productDto = ProductDto.builder()
+            .id(1L)
+            .name("패딩 점퍼")
+            .description("방한용으로 착용하기 좋은 따뜻한 패딩 점퍼입니다.")
+            .unitPrice(50000)
+            .stockQuantity(100)
+            .category(String.valueOf(Category.OUTER))
+            .size(String.valueOf(Size.L))
+            .shopDisplayable(true)
+            .fileName("product_image.png")
+            .fileUrl(null)
+            .build();
+
+        when(productRepository.findById(id)).thenReturn(Optional.of(product));
+
+        // when
+        ProductDto result = productService.updateProduct(id, productDto, null);
+
+        // then
+        verify(productRepository, times(1)).findById(id);
+
+        assertThat(result).usingRecursiveComparison().isEqualTo(productDto);
     }
 
     // request : Long id
     // response : void
     @Test
-    @DisplayName("상품을 제거할 수 있다.")
+    @DisplayName("상품 제거")
     void deleteProduct() {
         // given
         Long id = 1L;
